--- a/demo.html
+++ b/demo.html
@@ -43,6 +43,6 @@
 </head>
 <body class="bftn-homepage">
     <div id="root"></div>
-    <h1 style="font-weight: 700; color: #ebf82c; font-size: 50px;">Coming Soon!</h1>
+    <script async type="text/javascript" src="./src/bundle.js?v=8"></script>
 </body>
 </html>
